_______________________________

Solarus 1.5.0 (in progress)
_______________________________

Engine changes
--------------

* Maps: allow more than 3 layers (#445).
* Print when the main loop starts and stops.
* Print the Lua version at startup (#692).
* Improve the performance of custom entity collisions.
* Improve the performance of collisions by using a quadtree.
* Entities far from the camera are no longer suspended.
* Fix sol.input.get_mouse_coordinates() (#734).
* Fix straight movement precision.

Lua API changes
---------------

Changes that introduce incompatibilities:

* Items with amount now have a default max amount of 1000 (#688).

Changes that do not introduce incompatibilities:

* Add a function sol.main.get_type() (#744).
* Add a method map:get_num_layers() (#445).
* Add a method map:get_entities_in_rectangle() (#142).
* Add a method block:get_sprite().
* entity:set_optimization_distance() is now only a hint for the engine.

Data files format changes
-------------------------

* Maps: New property num_layers (#445).
* Dialogs: Allow empty texts.

__________________________

Solarus 1.4.5 (2015-11-22)
__________________________

Bug fixes for the 1.4 release.

* Fix file name not shown when there is an error in dialogs file (#718).
* Fix saving special characters in data files (#719).
* Fix sol.main.load_file() returning a string instead of nil on error (#730).
* Fix performance issue when sprites have huge frame delays (#723).
* Fix collisions triggered for removed entities (#710).
* Fix hero disappearing if lifting animation has less than 5 frames (#682).
* Fix collisions with diagonal dynamic tiles larger than 8x8 (#486).
* Fix path finding movement not working with NPCs (#708).
* Fix stuck on non-traversable dynamic tiles covered by traversables (#769).
* Fix collision detection of custom entities that do not move.
* Fix pickables with special movement falling in holes too early.