@@ -9,6 +9,7 @@ Engine changes
 * Maps: allow more than 3 layers (#445).
 * Print when the main loop starts and stops.
 * Print the Lua version at startup (#692).
+* Add a -lag command-line option to simulate slower systems for debugging.
 * Improve the performance of custom entity collisions.
 * Improve the performance of collisions by using a quadtree.
 * Entities far from the camera are no longer suspended.
